--- a/Cascade-QKD_BB84-Post-Processing_C++/Cascade-QKD_BB84-Post-Processing_C++.vcxproj.filters
+++ b/Cascade-QKD_BB84-Post-Processing_C++/Cascade-QKD_BB84-Post-Processing_C++.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="Cascade_Bob_Processing.cpp">
       <Filter>Source Files\Cascade_Bob</Filter>
     </ClCompile>
+    <ClCompile Include="Cascade_Alice_Permute.cpp">
+      <Filter>Source Files\Cascade_Alice</Filter>
+    </ClCompile>
+    <ClCompile Include="Cascade_Bob_Permute.cpp">
+      <Filter>Source Files\Cascade_Bob</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cascade_Alice.h">
@@ -57,6 +63,12 @@
       <Filter>Header Files\Cascade_Alice</Filter>
     </ClInclude>
     <ClInclude Include="Cascade_Bob_Processing.h">
+      <Filter>Header Files\Cascade_Bob</Filter>
+    </ClInclude>
+    <ClInclude Include="Cascade_Alice_Permute.h">
+      <Filter>Header Files\Cascade_Alice</Filter>
+    </ClInclude>
+    <ClInclude Include="Cascade_Bob_Permute.h">
       <Filter>Header Files\Cascade_Bob</Filter>
     </ClInclude>
   </ItemGroup>
