--- a/Cascade-QKD_BB84-Post-Processing_C++/Cascade-QKD_BB84-Post-Processing_C++.vcxproj.filters
+++ b/Cascade-QKD_BB84-Post-Processing_C++/Cascade-QKD_BB84-Post-Processing_C++.vcxproj.filters
@@ -51,10 +51,10 @@
     <ClCompile Include="Cascade_Bob_Permute.cpp">
       <Filter>Source Files\Cascade_Bob</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Alice_Toeplitz_Privacy_Amp.cpp">
+    <ClCompile Include="Cascade_Alice_Privacy_Amp.cpp">
       <Filter>Source Files\Cascade_Alice</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Bob_Toeplitz_Privacy_Amp.cpp">
+    <ClCompile Include="Cascade_Bob_Privacy_Amp.cpp">
       <Filter>Source Files\Cascade_Bob</Filter>
     </ClCompile>
   </ItemGroup>
@@ -77,10 +77,10 @@
     <ClInclude Include="Cascade_Bob_Permute.h">
       <Filter>Header Files\Cascade_Bob</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Alice_Toeplitz_Privacy_Amp.h">
+    <ClInclude Include="Cascade_Alice_Privacy_Amp.h">
       <Filter>Header Files\Cascade_Alice</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Bob_Toeplitz_Privacy_Amp.h">
+    <ClInclude Include="Cascade_Bob_Privacy_Amp.h">
       <Filter>Header Files\Cascade_Bob</Filter>
     </ClInclude>
   </ItemGroup>
