--- a/Cascade-QKD_BB84-Post-Processing_C++/Cascade-QKD_BB84-Post-Processing_C++.vcxproj.filters
+++ b/Cascade-QKD_BB84-Post-Processing_C++/Cascade-QKD_BB84-Post-Processing_C++.vcxproj.filters
@@ -13,75 +13,81 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\Cascade_Alice">
+    <Filter Include="Header Files\Cascade_Transmitter">
       <UniqueIdentifier>{3d30ac00-c132-4719-91f7-a1c6048bce63}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Cascade_Bob">
+    <Filter Include="Header Files\Cascade_Receiver">
       <UniqueIdentifier>{63770836-de9b-4215-816d-e422d3d87d07}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Cascade_Alice">
-      <UniqueIdentifier>{c3fa6dd8-fd36-48b9-bfa7-ecddc669391c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Cascade_Bob">
+    <Filter Include="Source Files\Cascade_Receiver">
       <UniqueIdentifier>{5129d7c7-b1e4-4a00-9710-9c202daf1518}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Cascade_Transmitter">
+      <UniqueIdentifier>{c3fa6dd8-fd36-48b9-bfa7-ecddc669391c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Alice.cpp">
-      <Filter>Source Files\Cascade_Alice</Filter>
+    <ClCompile Include="Cascade_Transmitter.cpp">
+      <Filter>Source Files\Cascade_Transmitter</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Bob.cpp">
-      <Filter>Source Files\Cascade_Bob</Filter>
+    <ClCompile Include="Cascade_Receiver.cpp">
+      <Filter>Source Files\Cascade_Receiver</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Alice_Processing.cpp">
-      <Filter>Source Files\Cascade_Alice</Filter>
+    <ClCompile Include="Cascade_Transmitter_Processing.cpp">
+      <Filter>Source Files\Cascade_Transmitter</Filter>
     </ClCompile>
     <ClCompile Include="message_Struct.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Bob_Processing.cpp">
-      <Filter>Source Files\Cascade_Bob</Filter>
+    <ClCompile Include="Cascade_Receiver_Processing.cpp">
+      <Filter>Source Files\Cascade_Receiver</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Alice_Permute.cpp">
-      <Filter>Source Files\Cascade_Alice</Filter>
+    <ClCompile Include="Cascade_Transmitter_Permute.cpp">
+      <Filter>Source Files\Cascade_Transmitter</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Bob_Permute.cpp">
-      <Filter>Source Files\Cascade_Bob</Filter>
+    <ClCompile Include="Cascade_Receiver_Permute.cpp">
+      <Filter>Source Files\Cascade_Receiver</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Alice_Privacy_Amp.cpp">
-      <Filter>Source Files\Cascade_Alice</Filter>
+    <ClCompile Include="Cascade_Transmitter_Privacy_Amp.cpp">
+      <Filter>Source Files\Cascade_Transmitter</Filter>
     </ClCompile>
-    <ClCompile Include="Cascade_Bob_Privacy_Amp.cpp">
-      <Filter>Source Files\Cascade_Bob</Filter>
+    <ClCompile Include="Cascade_Receiver_Privacy_Amp.cpp">
+      <Filter>Source Files\Cascade_Receiver</Filter>
+    </ClCompile>
+    <ClCompile Include="Error_Check.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cascade_Alice.h">
-      <Filter>Header Files\Cascade_Alice</Filter>
+    <ClInclude Include="Cascade_Transmitter.h">
+      <Filter>Header Files\Cascade_Transmitter</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Bob.h">
-      <Filter>Header Files\Cascade_Bob</Filter>
+    <ClInclude Include="Cascade_Receiver.h">
+      <Filter>Header Files\Cascade_Receiver</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Alice_Processing.h">
-      <Filter>Header Files\Cascade_Alice</Filter>
+    <ClInclude Include="Cascade_Transmitter_Processing.h">
+      <Filter>Header Files\Cascade_Transmitter</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Bob_Processing.h">
-      <Filter>Header Files\Cascade_Bob</Filter>
+    <ClInclude Include="Cascade_Receiver_Processing.h">
+      <Filter>Header Files\Cascade_Receiver</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Alice_Permute.h">
-      <Filter>Header Files\Cascade_Alice</Filter>
+    <ClInclude Include="Cascade_Transmitter_Permute.h">
+      <Filter>Header Files\Cascade_Transmitter</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Bob_Permute.h">
-      <Filter>Header Files\Cascade_Bob</Filter>
+    <ClInclude Include="Cascade_Receiver_Permute.h">
+      <Filter>Header Files\Cascade_Receiver</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Alice_Privacy_Amp.h">
-      <Filter>Header Files\Cascade_Alice</Filter>
+    <ClInclude Include="Cascade_Transmitter_Privacy_Amp.h">
+      <Filter>Header Files\Cascade_Transmitter</Filter>
     </ClInclude>
-    <ClInclude Include="Cascade_Bob_Privacy_Amp.h">
-      <Filter>Header Files\Cascade_Bob</Filter>
+    <ClInclude Include="Cascade_Receiver_Privacy_Amp.h">
+      <Filter>Header Files\Cascade_Receiver</Filter>
+    </ClInclude>
+    <ClInclude Include="Error_Check.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
